# EASI

./: .gitignore  .gitmodules  AGENT.md  CLAUDE.md  README.md  README_CN.md  pyproject.toml  run_easi_mini.sh
dockerfiles/VLM3R/: Dockerfile
dockerfiles/cambrains/: Dockerfile
docs/: Benchmark_Verification.md  CHANGELOG.md  Submit_results.md  Support_bench_models.md  cli-reference.md  easi-prompt-format-reference.md
docs/plans/: 2026-02-15-retry-resume-design.md  2026-02-15-retry-resume-plan.md
easi/: cli.py
easi/agents/: dummy_agent.py  prompt_builder.py  react_agent.py
easi/analysis/: trajectory_video.py
easi/communication/: filesystem.py  schemas.py
easi/core/: base_agent.py  base_env_manager.py  base_simulator.py  base_task.py  episode.py  exceptions.py  memory.py  protocols.py  render_platform.py  xorg_manager.py  xorg_platform.py
easi/evaluation/: __init__.py  metrics.py  parallel_runner.py  runner.py
easi/llm/: api_client.py  client.py  dummy_server.py  server_manager.py  utils.py
easi/llm/models/: helpers.py  (+1 more)
easi/simulators/: base_bridge.py  registry.py  subprocess_runner.py
easi/tasks/: dataset.py  registry.py  scaffold.py  yaml_utils.py
easi/utils/: import_utils.py  json_repair.py  locking.py  logging.py  paths.py  progress.py  spinner.py  system_deps.py
examples/lmms-eval/: embspatial.sh  mindcube.sh  mmsibench.sh  viewspatial.sh  vsibench.sh  vsibench_debiased.sh
fyp/: .gitignore  draft2.md  my-contrib.md  report-draft.md
fyp/report/: paper.tex  references.bib
fyp/report2/: abstract.tex  acknowledgements.tex  appendices.tex  bib.bib  ch1_introduction.tex  ch2_background.tex  ch3_diagnosis.tex  ch4_treatment.tex  ch5_embodied.tex  ch6_discussion.tex  ch7_conclusion.tex  cover.tex  main.tex  main.toc  title.tex
scripts/: setup.sh
scripts/submissions/: postprocess.py  run_easi_eval.py  scoring.py
tests/: test_agent_memory.py  test_ai2thor_rearrangement_2023_task.py  test_ai2thor_v335_simulator.py  test_analyze_trajectory.py  test_base_bridge.py  test_bridge_hooks.py  test_bridge_refactor.py  test_cli.py  test_cli_llm_args.py  test_coppeliasim_simulator.py  test_custom_http_server.py  test_docker_isolation.py  test_dummy_agent.py  test_dummy_llm.py  test_dummy_simulator.py  test_dummy_task.py  test_e2e_evaluation.py  test_ebalfred_task.py  test_ebhabitat_task.py  test_ebmanipulation_task.py  test_ebnavigation_task.py  test_env_manager.py  test_env_vars_wiring.py  test_evaluation_runner.py  test_filesystem_comm.py  test_installation_kwargs.py  test_json_repair.py  test_lhpr_vln_enhanced.py  test_lhpr_vln_task.py  test_llm_client.py  test_llm_full_flow.py  test_llm_imports.py  test_llm_utils.py  test_manipulathor_task.py  test_metrics.py  test_model_registry.py  test_multi_split_task.py  test_omnigibson_simulator.py  test_parallel_runner.py  test_parallel_vllm.py  (+12 more)
(+166 files in other folders)
